--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,14 @@
   "permissions": [
     "alarms",
     "tabs",
+    "storage",
     "http://www.bing.com/",
     "https://login.live.com/",
     "https://account.live.com/"
   ],
   "browser_action": {
     "default_title": "Bing Rewards Helper",
-    "default_icon": "icon.png"
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   }
 }
