add webNavigation permission

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     "alarms",
     "tabs",
     "storage",
+    "webNavigation",
     "http://www.bing.com/",
     "https://login.live.com/",
     "https://account.live.com/"
