--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Bing Rewards Helper",
-  "description": "Helps with Bing log on and auto search",
+  "name": "brome",
+  "description": "brome",
   "version": "1.0",
 
   "icons": { "128": "icon.png" },
@@ -22,7 +22,7 @@
     "https://account.live.com/"
   ],
   "browser_action": {
-    "default_title": "Bing Rewards Helper",
+    "default_title": "brome",
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   }
